update after lesson

--- a/Assignment2.html
+++ b/Assignment2.html
@@ -59,15 +59,14 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 <blockquote>
-<p>Abstract: according to</p>
+<p>Abstract:</p>
 </blockquote>
-<p><span class="citation">OECD (2013)</span></p>
 <div id="introduction" class="section level1">
 <h1>Introduction:</h1>
-<p>Topic Relevance Why is it interesting?</p>
+<p>Topic (federico) Relevance (pietro) Research questions (federico) Why are they interesting? (io) metodologia (federico)</p>
+<p>n.b.: include basic literature review ## References</p>
 <div class="references">
-<h2>References</h2>
-<p>OECD. 2013. <em>Health at a Glance 2013: OECD</em>. <a href="http://dx.doi.org/10.1787/health_glance-2013-en" class="uri">http://dx.doi.org/10.1787/health_glance-2013-en</a>.</p>
+
 </div>
 </div>
 
