--- a/Assignment2.html
+++ b/Assignment2.html
@@ -10,6 +10,7 @@
 
 <meta name="author" content="Pietro Romozzi and Federico Colombo" />
 
+<meta name="date" content="2014-10-23" />
 
 <title>Second Assignment - Proposal</title>
 
@@ -54,44 +55,63 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <div id="header">
 <h1 class="title">Second Assignment - Proposal</h1>
 <h4 class="author"><em>Pietro Romozzi and Federico Colombo</em></h4>
-<h4 class="date"><em>9 October 2014</em></h4>
+<h4 class="date"><em>23 October 2014</em></h4>
 </div>
 
 
 <blockquote>
 <p>Abstract:</p>
 </blockquote>
+<p>With the present work, the authors intend to create a descriptive model of economical, social and environmental characteristics of a territory, aiming to assess the impact of these factors on suicide rates. The model will be tested on Italian Regions, however if it turns to be robust, it could be tested also on other realities.</p>
 <div id="introduction" class="section level1">
 <h1>Introduction:</h1>
-<div id="topic-federico" class="section level3">
-<h3>Topic (federico)</h3>
+<div id="topic" class="section level3">
+<h3>Topic</h3>
+<p>Several papers have tried to propose an explanatory framework to describe how climate conditions affect mental health. Climate may affect individuals’ mental health both directly through extreme climate change, which exposes people to trauma, or indirectly, as some climate’s characteristics may affect physical activity and mental health. Extreme temperature or humidity rates have an influence on individuals’ physical health as it becomes more energy consuming to do physical activity, to work or to travel, but also mental health could be negatively affected as climate erodes physical environments, which subsequently damage social environments and thus, mental condition. Health is defined by the World Health Organisation as a ‘state of complete physical, mental and social wellbeing and not merely the absence of disease or infirmity’ (World health organisation, 1948). Mental health is one of the key components that define general health and it can be seen as an alteration in thinking, mood, behaviour, and associated distress or impaired functioning. Usually, problems related to mental condition can be considered to be either uncommon (schizophrenia, anxiety and personal disorders) or common (depression, dementia, physiological distress). The WHO showed that among almost 90% of people who died by suicide in high-income countries at least one mental disorder was present, while those affected by more than one mental disorder were experiencing significantly higher risks of committing suicide. The relationship between mental health (and the related suicide rates) and climate still needs to be studied into details, but some scholars identified extreme heat as a factor that is often associated with a general increase in aggressive, criminal and suicide rates (<span class="citation">Bouchama A. (2007)</span>). Humidity has also been associated with mental functioning, especially with poorer concentration and elevated fatigue. Climate change is a phenomenon which is expected to have severe consequences on the mental health of millions of people too: the threat to physical health or the potential loss of home, jobs and familiars due to catastrophic climate changes negatively affects mental condition. Sunlight is another factor, which has been documented to have direct effects on climate related health problems such as depressive symptoms, anxiety disorders, and other mental problems usually peaking in the cold season when there is limited sunlight (<span class="citation">Magnusson (2007)</span>). The debate about the impact of climate change on human health has only very recently included considerations of mental health. Climate can have an influence on our psyche in a varieties of ways: it can directly inflict more and more natural disasters on human settlements, which, as evidence suggests, increases anxiety-related or chronic severe mental problems; climate can also increase the risk of physical injuries or health problems, which are correlated with mental health; finally, climate can endanger the natural and social environment on which people depend for their wellbeing.</p>
 </div>
 <div id="relevance" class="section level3">
 <h3>Relevance</h3>
-<p>According to the latest WHO report concerning suicide prevention <span class="citation">(see the latest report by WHO 2014)</span>, “Globally, among young adults 15−29 years of age suicide accounts for 8.5% of all deaths and is ranked as the second leading cause of death (after traffic accidents). Among adults aged 30−49 years it accounts for 4.1% of all deaths and is ranked the fifth leading cause of death”. This statement displays clearly the relevance of this issue, which is also greater considering that these estimation are often underrated because of the difficulties in recognizing sucide as a cause of death - will of committing suicide could be not recognized, families could prefer not to speak about it, and so on <span class="citation">(see the note by ISTAT 2012)</span>.</p>
-<p>The above mentioned paper, moreover, is considered by several OECD countries as a strong stimulus to move further in suicide prevention. Among these countries, we are going to focus on Italy, particularly at regional level.</p>
-<p>Indeed, our convintion is that a focus on smaller than countries environments, does help in assessing how factors affecting suicides impact differently within the same country, thus highlighting a possible variance among regions which is overlooked by country-level aggregate data.</p>
-<p>In addition to this “micro-level” focus, we also intend to stress some environmental and climatic characteristics which could contribute to create “suicide-genic” environment.</p>
-<p>Recognizing these characteristics will be helpful for setting efficient prevention strategies, and, especially considering the regional focus, it will be more easy for policy makers to design policies tailored to the specific regional reality.</p>
-<p>Especially the climatic characteristic mentioned, according to recent literature, has turned to be correlated with mental health and, trough it, with suicide. These are often not considered, as some auhors like <span class="citation">Berry, Bowen, and Kjellstrom (2009)</span> underline, therefore we believe that including them in the present paper could deliver interesting results and perhaps stimulate further research in this branch.</p>
+<p>According to the latest WHO report concerning suicide prevention <span class="citation">(see the latest report by WHO 2014)</span>, “Globally, among young adults 15−29 years of age suicide accounts for 8.5% of all deaths and is ranked as the second leading cause of death (after traffic accidents). Among adults aged 30−49 years it accounts for 4.1% of all deaths and is ranked the fifth leading cause of death”. This statement displays clearly the relevance of this issue, which is also greater considering that these estimation are often underrated because of the difficulties in recognizing sucide as a cause of death - will of committing suicide could be not recognized, families could prefer not to speak about it, and so on <span class="citation">(see the note by ISTAT 2012)</span>. The above mentioned paper, moreover, is considered by several OECD countries as a strong stimulus to move further in suicide prevention. Among these countries, we are going to focus on Italy, particularly at regional level. Indeed, our convintion is that a focus on smaller than countries environments, does help in assessing how factors affecting suicides impact differently within the same country, thus highlighting a possible variance among regions which is overlooked by country-level aggregate data. In addition to this “micro-level” focus, we also intend to stress some environmental and climatic characteristics which could contribute to create “suicide-genic” environment. Recognizing these characteristics will be helpful for setting efficient prevention strategies, and, especially considering the regional focus, it will be more easy for policy makers to design policies tailored to the specific regional reality. Especially the climatic characteristic mentioned, according to recent literature, has turned to be correlated with mental health and, trough it, with suicide. These are often not considered, as some auhors like <span class="citation">Berry, Bowen, and Kjellstrom (2009)</span> underline, therefore we believe that including them in the present paper could deliver interesting results and perhaps stimulate further research in this branch.</p>
 </div>
-<div id="research-questions-federico" class="section level3">
-<h3>Research questions (federico)</h3>
+<div id="research-questions-and-methodology" class="section level3">
+<h3>Research questions and methodology</h3>
+<div id="research-questions" class="section level4">
+<h4>Research questions:</h4>
+<p>We want to test if the following hypothesis holds true: - Suicide rate in a certain Italian region increases when the average temperature is low. - Suicide rate increases when the number of solar radiation is low. - Suicide rate increases when the urbanization rate is high. - Suicide rate increases when precipitations happen to be frequent. - Suicide rate increases when GDP per capita is high.</p>
+<p>The hypothesis we want to test originate from a careful review of the relevant literature regarding mental disorders and climate change. The paper will focus on the relation between suicidal behaviours (an extreme consequence of mental disorders) and various factors concerning climate.</p>
 </div>
-<div id="why-are-they-interesting" class="section level3">
-<h3>Why are they interesting?</h3>
-<p>One obvious reason why this work is potentially interesting is that mental disorders and suicide are nowadays often discussed both among insitution in health’s field and media.</p>
-<p>Moreover, our focus on environmental and climati characteristics grounds on a recent body of studies which recognizes the link between these dimentions and mental disorders. These variables are going to be included in addition to more traditional variables (i.e. related to economic dimensions) to develop a wider model of analysys of mental disorders. As a consequence, the broad spectrum of this study makes the present work interesting and innovative.</p>
-<p>Another valuable point is the regional focus which allows to underscore, in the end, contingent specific characteristics of the territory rather than the whole country. Therefore, bringing the analysis at a smaller level, makes easier for policy makers to deal with these issues at a local and so more manageable level, as stated before.</p>
+<div id="the-model" class="section level4">
+<h4>The model:</h4>
+<p>The model we want to estimate will therefore be the following:</p>
+<p>Suicide rate = a + b1 x average temperature + b2 x solar radiation + b3 x urban population + b4 x precipitations + b5 x gini coefficient + b6 x GDP per capita + e</p>
+<p>“Gini coefficient” and “GDP per capita” are our control variables.</p>
 </div>
-<div id="methodology-federico" class="section level3">
-<h3>Methodology (federico)</h3>
-<p>n.b.: include basic literature review</p>
+<div id="considered-variables-data-gathering-software-used" class="section level4">
+<h4>Considered variables, data gathering, software used:</h4>
+<p>Variable <em>suicide rate</em> is defined by the WHO as the standardized number of deaths by suicide every 100.000 people occurred in a certain country. Since the focus of this paper is on intra-regional differences in Italy, data from the Italian National Institute of Statistics (ISTAT) will be used. Data regarding our five specific case studies are provided.</p>
+<p>Variable <em>solar radiation</em> measures the level of solar irradiance in megajoul (MJ) per square meter. The Italian Air Force offers a metereological service, which is responsible for the measurement of solar irradiance on the Italian territory. They also provide documentation gathered from various metereological units, unfortunately not for every single Italian region. Because of that, if regional measurement appears to be too complex for the scope of this work, we might decide not to use this variable or not to consider some regions.</p>
+<p>Variable <em>urban population</em> measures of the degree of urbanization of a population. It describes the percentage of the total population living in urban areas, as defined by the country. Also in this case, data provided by Istat will be used.</p>
+<p>Regarding variable <em>GDP per capita</em>, we will use Eurostat’s database, where it is possible to find data regarding GDP and GDP per capita for every single region in the European Union. Database is easy to access and to use.</p>
+<p>All the data gathered will be processed using “R” <span class="citation">(see R Core Team 2014)</span>. We use as well some packages developed for R, namely “ggplot2” <span class="citation">(see Wickham and Chang 2014)</span> and “repmis” <span class="citation">(see Gandrud 2014)</span>.</p>
+</div>
+<div id="cases-studied" class="section level4">
+<h4>Cases studied:</h4>
+<p>We take into consideration five areas: North-West, North-East, Centre, South and Islands in Italy. The advantage of adopting this categorization is that instead of twenty different case studies (there are twenty different regions in Italy), among which some could be really similar because they are located in the same macro area, we will work with only five. Also the Italian Statistical Agency and Eurostat use this categorization for simplicity and some of the databases we are going to use already include data divided according to this idea of clustering homogeneous Italian regions together.</p>
+</div>
+</div>
+<div id="what-does-it-make-this-work-interesting" class="section level3">
+<h3>What does it make this work interesting?</h3>
+<p>One obvious reason why this work is potentially interesting is that mental disorders and suicide are nowadays often discussed both among insitution in health’s field and media. Moreover, our focus on environmental and climati characteristics grounds on a recent body of studies which recognizes the link between these dimentions and mental disorders. These variables are going to be included in addition to more traditional variables (i.e. related to economic dimensions) to develop a wider model of analysys of mental disorders. As a consequence, the broad spectrum of this study makes the present work interesting and innovative. Another valuable point is the regional focus which allows to underscore, in the end, contingent specific characteristics of the territory rather than the whole country. Therefore, bringing the analysis at a smaller level, makes easier for policy makers to deal with these issues at a local and so more manageable level, as stated before.</p>
 <div class="references">
 <h2>References:</h2>
 <p>Berry, Helen Louise, Kathryn Bowen, and Tord Kjellstrom. 2009. “Climate Change and Mental Health: A Causal Pathways Framework.”</p>
+<p>Bouchama A., Mohamed G., Dehbi M. 2007. “Prognostic Factors in Heat Wave Related Deaths: A Meta-Analysis.” <em>Arch Intern Med.</em>, no. 20: 2170–76.</p>
+<p>Gandrud, Christopher. 2014. <em>Repmis: A Collection of Miscellaneous Tools for Reproducible Research with R.</em> <a href="http://CRAN.R-project.org/package=repmis" class="uri">http://CRAN.R-project.org/package=repmis</a>.</p>
 <p>ISTAT. 2012. “I Suicidi in Italia: Tendenze E Confronti, Come Usare Le Statistiche.”</p>
+<p>Magnusson, A. 2007. “An Overview of Epidemiological Studies on Seasonal Affective Disorder.” <em>Acta Psychiatria Scand.</em>, no. 101: 176–84.</p>
+<p>R Core Team. 2014. <em>R: A Language and Environment for Statistical Computing</em>. Vienna, Austria: R Foundation for Statistical Computing. <a href="http://www.R-project.org/" class="uri">http://www.R-project.org/</a>.</p>
 <p>WHO. 2014. “Preventing Suicide: A Global Imperative.”</p>
+<p>Wickham, Hadley, and Winston Chang. 2014. <em>Ggplot2: An Implementation of the Grammar of Graphics</em>. <a href="http://CRAN.R-project.org/package=ggplot2" class="uri">http://CRAN.R-project.org/package=ggplot2</a>.</p>
 </div>
 </div>
 </div>
